--- a/CodetestPackage/main/default/lwc/answerBox/answerBox.css
+++ b/CodetestPackage/main/default/lwc/answerBox/answerBox.css
@@ -4,7 +4,7 @@ div {
 }
 
 textarea {
-    height: 100%;
+    height: 30rem;
     font-family: 'Courier New', Courier, monospace;
     font-size: 1rem;
 }
