--- a/CodetestPackage/main/default/lwc/testCenter/testCenter.css
+++ b/CodetestPackage/main/default/lwc/testCenter/testCenter.css
@@ -1,9 +1,9 @@
 .container {
-    padding: 1rem;
+    padding: 2rem;
 
     backdrop-filter: blur(16px) saturate(200%);
     -webkit-backdrop-filter: blur(16px) saturate(200%);
-    background-color: rgba(17, 25, 40, 0.67);
+    background-color: rgb(243, 247,247);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
 }
